# openeds

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
assets/: challenge.md  solution.md
openeds/: callbacks.py  dataset.py  resnet.py
openeds/scripts/: assemble_dataset.py  infer_estimation.py  infer_forecast.py  make_ensemble.py  resize_dataset.py  train_estimation.py
openeds/utils/: __init__.py  aug_utils.py  dataset_utils.py  io_utils.py  metric_utils.py  path_utils.py  tensor_utils.py
